--- a/ShelterEvidency/ShelterEvidency.csproj
+++ b/ShelterEvidency/ShelterEvidency.csproj
@@ -83,6 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AnimalInfo.cs" />
     <Compile Include="Models\AdoptionModel.cs" />
     <Compile Include="Models\AdressModel.cs" />
     <Compile Include="Models\AnimalModel.cs" />
