added Diary class. minor updates

--- a/ShelterEvidency/App.config
+++ b/ShelterEvidency/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="ShelterEvidency.Properties.Settings.ShelterDatabaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Michal\source\repos\ShelterEvidency\ShelterEvidency\Database\ShelterDatabase.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database\ShelterDatabase.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
