GUI update, async db queries

--- a/ShelterEvidency/ShelterEvidency.csproj
+++ b/ShelterEvidency/ShelterEvidency.csproj
@@ -102,6 +102,7 @@
     <Compile Include="AdoptionInfo.cs" />
     <Compile Include="AnimalInfo.cs" />
     <Compile Include="DocumentManager.cs" />
+    <Compile Include="Helpers\InvertBooleanConverter.cs" />
     <Compile Include="Models\AdoptionModel.cs" />
     <Compile Include="Models\AnimalModel.cs" />
     <Compile Include="Models\BreedModel.cs" />
@@ -359,8 +360,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>ShelterDatabase.mdf</DependentUpon>
     </Content>
-    <Content Include="LoadingScreen.svg" />
-    <SplashScreen Include="LoadingScreen.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
