--- a/ShelterEvidency/ShelterEvidency.csproj
+++ b/ShelterEvidency/ShelterEvidency.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Caliburn.Micro.Platform.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.3.2.0\lib\net45\Caliburn.Micro.Platform.Core.dll</HintPath>
     </Reference>
+    <Reference Include="LiveCharts, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.0.9.7\lib\net45\LiveCharts.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.2.2.920, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.2.2\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
@@ -99,8 +102,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AdoptionInfo.cs" />
-    <Compile Include="AnimalInfo.cs" />
+    <Compile Include="WrappingClasses\AdoptionInfo.cs" />
+    <Compile Include="WrappingClasses\AnimalInfo.cs" />
     <Compile Include="DocumentManager.cs" />
     <Compile Include="Helpers\BoolToValueConverter.cs" />
     <Compile Include="Helpers\InvertBooleanConverter.cs" />
@@ -123,7 +126,8 @@
     <Compile Include="Models\StatisticModel.cs" />
     <Compile Include="Models\StayModel.cs" />
     <Compile Include="Models\WalkModel.cs" />
-    <Compile Include="PersonInfo.cs" />
+    <Compile Include="WrappingClasses\DonationInfo.cs" />
+    <Compile Include="WrappingClasses\PersonInfo.cs" />
     <Compile Include="ViewModels\AddAnimalViewModel.cs" />
     <Compile Include="ViewModels\AdoptionCardViewModel.cs" />
     <Compile Include="ViewModels\AdoptionsViewModel.cs" />
@@ -226,6 +230,7 @@
     <Compile Include="Views\WalksView.xaml.cs">
       <DependentUpon>WalksView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WrappingClasses\WalkInfo.cs" />
     <Page Include="Views\AddAnimalView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
