--- a/ShelterEvidency/ShelterEvidency.csproj
+++ b/ShelterEvidency/ShelterEvidency.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Caliburn.Micro.Platform.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.3.2.0\lib\net45\Caliburn.Micro.Platform.Core.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.2.2.920, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.2.2\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
@@ -101,11 +104,24 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\DeathModel.cs" />
     <Compile Include="Models\EscapeModel.cs" />
     <Compile Include="Models\ShelterModel.cs" />
+    <Compile Include="ViewModels\CreateDeathViewModel.cs" />
+    <Compile Include="ViewModels\CreateEscapeViewModel.cs" />
     <Compile Include="ViewModels\GeneralStaysViewModel.cs" />
+    <Compile Include="ViewModels\StayEndViewModel.cs" />
+    <Compile Include="Views\CreateDeathView.xaml.cs">
+      <DependentUpon>CreateDeathView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreateEscapeView.xaml.cs">
+      <DependentUpon>CreateEscapeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\GeneralStaysView.xaml.cs">
       <DependentUpon>GeneralStaysView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StayEndView.xaml.cs">
+      <DependentUpon>StayEndView.xaml</DependentUpon>
     </Compile>
     <Compile Include="WrappingClasses\AdoptionInfo.cs" />
     <Compile Include="WrappingClasses\AnimalInfo.cs" />
@@ -131,6 +147,7 @@
     <Compile Include="Models\StayModel.cs" />
     <Compile Include="Models\WalkModel.cs" />
     <Compile Include="WrappingClasses\CostInfo.cs" />
+    <Compile Include="WrappingClasses\DeathInfo.cs" />
     <Compile Include="WrappingClasses\DiaryRecordInfo.cs" />
     <Compile Include="WrappingClasses\DonationInfo.cs" />
     <Compile Include="WrappingClasses\EscapeInfo.cs" />
@@ -270,6 +287,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\CreateDeathView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CreateEscapeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\DocumentsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -327,6 +352,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\StatisticsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\StayEndView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
