--- a/ShelterEvidency/packages.config
+++ b/ShelterEvidency/packages.config
@@ -2,8 +2,14 @@
 <packages>
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net472" />
+  <package id="FastMember" version="1.3.0" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
 </packages>
